--- a/contact.html
+++ b/contact.html
@@ -113,7 +113,12 @@ function MM_nbGroup(event, grpName) { //v6.0
                 <hr />
 			    
 <br />
-                <form action="http://www.frankdolphinwong.nl/contact.php" method="POST">
+
+
+                <form action="http://www.frankdolphinwong.nl" method="POST">
+  <input type="hidden" name="_to" value="info@frankdolphinwong.nl">
+  <input type="hidden" name="_cc" value="jhvanderschee@gmail.com">
+  <input type="text" name="_gotcha" style="display: none;">
                   
                   <table width="400" border="0" cellpadding="0" cellspacing="0">
     <tr>
