Updated 'contact.html' via CloudCannon

--- a/contact.html
+++ b/contact.html
@@ -115,7 +115,7 @@ function MM_nbGroup(event, grpName) { //v6.0
 <br />
 
 
-                <form action="http://www.frankdolphinwong.nl" method="POST">
+                <form action="/" method="POST">
   <input type="hidden" name="_to" value="info@frankdolphinwong.nl">
   <input type="hidden" name="_cc" value="jhvanderschee@gmail.com">
   <input type="text" name="_gotcha" style="display: none;">
